Fix html code so that all 3 cards are on the same line, minimizing whitespace.

--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,6 @@ p.para {
 
 /* PROJECT AREA */
 .our-project .img img {
-  max-height: 450px;
-  width: 100%;
+  max-height: 250px;
+  width: auto;
 }
